# trygonometryczne

./: .anjuta_sym_db.db  AUTHORS  Makefile.am  Makefile.in  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  trygonometryczne
Debug/src/.deps/: main.Po
autom4te.cache/: output.0  output.1  traces.0  traces.1
src/: Makefile.am  Makefile.in  main.cc  main.cc~  trygonometryczne.ui
